[package]
name = "new-learn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "src-service"
path = "src/src-service/main.rs"

[dependencies]
rand = "0.8.5"
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Ioctl",
    "Win32_System_IO",
     "Win32_System_SystemServices",
] }
